n-vm-macros/tests/compile_fail/multiple_backends.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm(cloud_hypervisor, qemu)]
fn multiple_backends() {}

fn main() {}